--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Spring Boot Example</title>
+    <title>Spring Boot Demo</title>
 </head>
 <body>
-    <h2>Spring Boot Example</h2>
+    <h2>Spring Boot Demo</h2>
     
     <p>
     	<a href="hello team"> Click me to say Hello</a>
