--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Spring Boot Demo</title>
+    <title>Spring Boot Demo Java app</title>
 </head>
 <body>
     <h2>Spring Boot Demo</h2>
